Improved Lua plugin management to make it compatible with Arcade64 and MAME internal UI